[package]
name = "ipopt-src"
version = "0.2.0+3.14.12"
edition = "2021"
build = "build.rs"
links = "Ipopt"
license = "Apache-2.0"
description = "Redistribution of Coin-OR Ipopt as a crate"
documentation = "https://docs.rs/ipopt-src/"
repository = "https://github.com/Maroon502/ipopt-src.git"
keywords = ["coin-or", "ipopt", "ipopt-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Ipopt/**/*",
    "!Ipopt/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["openblas"]

openblas-static = ["openblas-src"]
openblas-dynamic = ["openblas-src"]
mkl-static-lp64-seq = ["intel-mkl", "intel-mkl-src/mkl-static-lp64-seq"]
mkl-dynamic-lp64-seq = ["intel-mkl", "intel-mkl-src/mkl-dynamic-lp64-seq"]
intel-mkl = []
openblas = []
# mumps = []
# pardiso = []
# hsl = []
# blas = []

[dependencies]
intel-mkl-src = {version = "0.8", optional = true}
# openblas-src = {version = "0.10", optional = true}
openblas-src = { git = "https://github.com/mike-kfed/openblas-src.git", branch = "arm-cross-compile", optional = true }

[build-dependencies]
cc = "1.0"
coin-build-tools = "0.2"
