[package]
name = "ipopt-src"
version = "0.2.3+3.14.15"
edition = "2021"
build = "build.rs"
links = "Ipopt"
license = "Apache-2.0"
description = "Redistribution of Coin-OR Ipopt as a crate"
documentation = "https://docs.rs/ipopt-src/"
repository = "https://github.com/Maroon502/ipopt-src.git"
keywords = ["coin-or", "ipopt", "ipopt-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Ipopt/**/*",
    "!Ipopt/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["mumps", "openblas-static"]

intel-mkl = ["intel-mkl-src"]
mumps = ["mumps-src"]
# hsl = []
# spral = []
# wsmp = []

intel-mkl-system = ["intel-mkl-src?/mkl-dynamic-lp64-seq", "mumps-src?/intel-mkl-system"]
intel-mkl-static = ["intel-mkl-src?/mkl-static-lp64-seq", "mumps-src?/intel-mkl-static"]

openblas-system = ["mumps-src?/openblas-system"]
openblas-static = ["mumps-src?/openblas-static"]


[dependencies]
intel-mkl-src = { version = "0.8", optional = true }
openblas-src = { version = "0.10", optional = true }
mumps-src = { version = "0.1", default-features = false, features = ["d_arith"], optional = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
coin-build-tools = "0.2"
